--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<h3><div id="current_zoo_name"></div></h3>
 		<div id="current_zoo_data"></div>
 		<h1>Held Species</h1>
-		<div id="test"></div>
+		<div id="species_info"></div>
 		<table>
 			<tr>
 				<th><h1>Birds</h1></th>
