--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<div class="sidebar">
-		<h1>ZSU Zoos</h1>
+		<h1>ZSUIMS v0.1.7</h1>
 	</div>
 	<div class="sidebarcontent">
 		<h2>Open</h2>
@@ -19,22 +19,101 @@
 		<div id="current_zoo_data"></div>
 		<h1>Held Species</h1>
 		<div id="species_info"></div>
-		<table>
-			<tr>
-				<th><h1>Birds</h1></th>
-				<th><h1>Mammals</h1></th>
-				<th><h1>Herptiles</h1></th>
-				<th><h1>Fish</h1></th>
-				<th><h1>Invertebrates</h1></th>
-			</tr>
-			<tr>
-				<td><div id="bird_holdings"></div></td>
-				<td><div id="mamm_holdings"></div></td>
-				<td><div id="herp_holdings"></div></td>
-				<td><div id="fish_holdings"></div></td>
-				<td><div id="inve_holdings"></div></td>
-			</tr>
-		</table>
+		<h2>Birds</h2>
+		<div class="row">
+			<div class="column">
+				<div id="bird_col_0"></div>
+			</div>
+			<div class="column">
+				<div id="bird_col_1"></div>
+			</div>
+			<div class="column">
+				<div id="bird_col_2"></div>
+			</div>
+			<div class="column">
+				<div id="bird_col_3"></div>
+			</div>
+			<div class="column">
+				<div id="bird_col_4"></div>
+			</div>
+		</div>
+		
+		<h2>Mammals</h2>
+		<div class="row">
+			<div class="column">
+				<div id="mam_col_0"></div>
+			</div>
+			<div class="column">
+				<div id="mam_col_1"></div>
+			</div>
+			<div class="column">
+				<div id="mam_col_2"></div>
+			</div>
+			<div class="column">
+				<div id="mam_col_3"></div>
+			</div>
+			<div class="column">
+				<div id="mam_col_4"></div>
+			</div>
+		</div>
+		
+		<h2>Herptiles</h2>
+		<div class="row">
+			<div class="column">
+				<div id="herp_col_0"></div>
+			</div>
+			<div class="column">
+				<div id="herp_col_1"></div>
+			</div>
+			<div class="column">
+				<div id="herp_col_2"></div>
+			</div>
+			<div class="column">
+				<div id="herp_col_3"></div>
+			</div>
+			<div class="column">
+				<div id="herp_col_4"></div>
+			</div>
+		</div>
+		
+		<h2>Fish</h2>
+		<div class="row">
+			<div class="column">
+				<div id="fish_col_0"></div>
+			</div>
+			<div class="column">
+				<div id="fish_col_1"></div>
+			</div>
+			<div class="column">
+				<div id="fish_col_2"></div>
+			</div>
+			<div class="column">
+				<div id="fish_col_3"></div>
+			</div>
+			<div class="column">
+				<div id="fish_col_4"></div>
+			</div>
+		</div>
+		
+		<h2>Invertebrates</h2>
+		<div class="row">
+			<div class="column">
+				<div id="invert_col_0"></div>
+			</div>
+			<div class="column">
+				<div id="invert_col_1"></div>
+			</div>
+			<div class="column">
+				<div id="invert_col_2"></div>
+			</div>
+			<div class="column">
+				<div id="invert_col_3"></div>
+			</div>
+			<div class="column">
+				<div id="invert_col_4"></div>
+			</div>
+		</div>
+		
 	</div>
 </html>
 
