--- a/index.html
+++ b/index.html
@@ -5,116 +5,20 @@
 	</head>
 	
 	<div class="sidebar">
-		<h1>ZSUIMS v0.1.7</h1>
+		<h1>ZSUIMS v0.2.1</h1>
+		<button type="button2" onClick="blankData()"><div id="zoo_button"><b>Search Zoos</b></div></button>
+		<button type="button2" onClick="showSpeciesList()"><div id="species_button">Search Species</div></button>
 	</div>
 	<div class="sidebarcontent">
-		<h2>Open</h2>
+		<h2 style="margin-bottom: 8px;">Open</h2>
 		<div id="open_zoo_list"></div>
-		<h2>Closed</h2>
+		<h2 style="margin-bottom: 8px;">Closed</h2>
 		<div id="closed_zoo_list"></div>
 	</div>
 	
-	<div style="margin-left: 315px; padding-left:15px">
-		<h3><div id="current_zoo_name"></div></h3>
-		<div id="current_zoo_data"></div>
-		<h1>Held Species</h1>
-		<div id="species_info"></div>
-		<h2>Birds</h2>
-		<div class="row">
-			<div class="column">
-				<div id="bird_col_0"></div>
-			</div>
-			<div class="column">
-				<div id="bird_col_1"></div>
-			</div>
-			<div class="column">
-				<div id="bird_col_2"></div>
-			</div>
-			<div class="column">
-				<div id="bird_col_3"></div>
-			</div>
-			<div class="column">
-				<div id="bird_col_4"></div>
-			</div>
-		</div>
-		
-		<h2>Mammals</h2>
-		<div class="row">
-			<div class="column">
-				<div id="mam_col_0"></div>
-			</div>
-			<div class="column">
-				<div id="mam_col_1"></div>
-			</div>
-			<div class="column">
-				<div id="mam_col_2"></div>
-			</div>
-			<div class="column">
-				<div id="mam_col_3"></div>
-			</div>
-			<div class="column">
-				<div id="mam_col_4"></div>
-			</div>
-		</div>
-		
-		<h2>Herptiles</h2>
-		<div class="row">
-			<div class="column">
-				<div id="herp_col_0"></div>
-			</div>
-			<div class="column">
-				<div id="herp_col_1"></div>
-			</div>
-			<div class="column">
-				<div id="herp_col_2"></div>
-			</div>
-			<div class="column">
-				<div id="herp_col_3"></div>
-			</div>
-			<div class="column">
-				<div id="herp_col_4"></div>
-			</div>
-		</div>
-		
-		<h2>Fish</h2>
-		<div class="row">
-			<div class="column">
-				<div id="fish_col_0"></div>
-			</div>
-			<div class="column">
-				<div id="fish_col_1"></div>
-			</div>
-			<div class="column">
-				<div id="fish_col_2"></div>
-			</div>
-			<div class="column">
-				<div id="fish_col_3"></div>
-			</div>
-			<div class="column">
-				<div id="fish_col_4"></div>
-			</div>
-		</div>
-		
-		<h2>Invertebrates</h2>
-		<div class="row">
-			<div class="column">
-				<div id="invert_col_0"></div>
-			</div>
-			<div class="column">
-				<div id="invert_col_1"></div>
-			</div>
-			<div class="column">
-				<div id="invert_col_2"></div>
-			</div>
-			<div class="column">
-				<div id="invert_col_3"></div>
-			</div>
-			<div class="column">
-				<div id="invert_col_4"></div>
-			</div>
-		</div>
-		
+	<div id="main_data" style="margin-left: 315px; padding-left:15px">
 	</div>
+	
 </html>
 
 
