--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<div class="sidebar">
-		<h1>ZSUIMS v0.2.4</h1>
+		<h1 id="version_number">ZSUIMS v0.2.1</h1>
 		<button type="button2" onClick="blankData()"><div id="zoo_button"><b>Search Zoos</b></div></button>
 		<button type="button2" onClick="showSpeciesList()"><div id="species_button">Search Species</div></button>
 	</div>
