--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	</head>
 	
 	<div class="sidebar">
-		<h1 id="version_number">ZSUIMS</h1>
+		<h1 id="version_number">ZSUIMS v0.2.1</h1>
 		<button type="button2" onClick="blankData()"><div id="zoo_button"><b>Search Zoos</b></div></button>
 		<button type="button2" onClick="showSpeciesList()"><div id="species_button">Search Species</div></button>
+		<button type="button2" onClick="showStaffLogin()"><div id="admin_button">Admin Tools</div></button>
 	</div>
 	<div class="sidebarcontent">
 		<h2 style="margin-bottom: 8px;">Open</h2>
