--- a/rw/index.html
+++ b/rw/index.html
@@ -10,9 +10,17 @@
 				<a href=""><li>Zoos</li></a>
 				<a href=""><li>ZSUIMS</li></a>
 				<a href=""><li>Join ZSU</li></a>
-				<a href=""><li>Donate</li></a>
+				<a href="https://www.patreon.com/aviivix"><li>Donate</li></a>
 			</ul>
 		</nav>
+		<!-- Carousel -->
+		<div class="carousel-slide" role="listbox">
+		<div id="carousel">
+			<div id="carousel_cur" class="carousel_container_main">
+			</div>
+			<div id="carousel_nxt" class="carousel_container_next">
+			</div>
+		</div>	
 	</body>
 </html>
 
